# cppatch

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakeUtils.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  cppatch.cpp  cppatch.h  queues.cpp  queues.h  sources.cpp  sources.h  utils.h
tests/: CMakeLists.txt  tests.cpp
